
  01 Aug 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 58805: net.eth0 should use bridge so that bridge
    interfaces are configured prior to net.br0 running

    Fix bug 56856: Get rid of net.rej and integrate missing stuff to
    conf.d/net

    Apply half of spock's patch in bug 45784: Check for
    conf.d/bootsplash instead of conf.d/bootsplash.conf

  21 Jul 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 26952: Use /etc/bash/bashrc to setup PS1, testing $- to
    determine if shell is interactive.  The new system-wide bashrc is
    installed by bash-2.05b-r10

  19 Jul 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 38743: strip leading and trailing spaces from variable
    values in genenviron.awk.  Thanks to Marius Mauch for the patch.

  09 Jul 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 55576: swap words "start" and "stop" in runscript.sh error
    message

* rc-scripts 1.5.1 (28 Jun 2004)

  28 Jun 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix dhcp in iface_start_ifconfig: It was re-using the variable
    ${i} which would result in the following error:
        /sbin/runscript.sh: line 441: ((: 16.141.88.153: syntax error
        in expression (error token is ".141.88.153")

    Use vlan_IFACE instead of iface_IFACE_vlans in net.eth0 for more
    consistent vlan configuration.  Thanks to robbat2 in bug 55394
    (not fully resolved)

    Add example for checking if root filesystem is NFS-mounted via
    predown function in conf.d/net for bug 53104.  This might be
    better integrated at some point into net.eth0

* rc-scripts 1.5.0 (26 Jun 2004)

  26 Jun 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 47659: support iproute2-style configuration.  Thanks to
    Dean Bailey for some fantastic patches, including documentation
    for conf.d/net.  This is a pretty huge re-write of net.eth0

    Fix bug 34607: provide examples for in conf.d/net for preup,